reinitialised stop button to fix runtime issue

--- a/MyFit v.1/MyFit/Base.lproj/Main.storyboard
+++ b/MyFit v.1/MyFit/Base.lproj/Main.storyboard
@@ -174,16 +174,13 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eVl-we-4vM">
-                                <rect key="frame" x="162" y="549" width="101" height="45"/>
-                                <animations/>
-                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="08N-5H-bzg">
+                                <rect key="frame" x="194" y="570" width="33" height="30"/>
                                 <state key="normal" title="Stop">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <action selector="stopClicked:" destination="W74-my-gu4" eventType="touchUpInside" id="jwF-GD-SKh"/>
-                                    <segue destination="bPg-zM-6V1" kind="show" id="hmc-so-pb2"/>
+                                    <action selector="stopClicked:" destination="W74-my-gu4" eventType="touchUpInside" id="vEW-KF-pvC"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -191,23 +188,20 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="5d7-f9-VRZ" firstAttribute="leading" secondItem="4VW-7t-Tut" secondAttribute="leadingMargin" constant="73" id="6pB-em-rhM"/>
-                            <constraint firstItem="eVl-we-4vM" firstAttribute="top" secondItem="9WS-hp-h7e" secondAttribute="bottom" constant="112" id="9SJ-LX-EbB"/>
                             <constraint firstItem="FOS-v4-E1W" firstAttribute="top" secondItem="9WS-hp-h7e" secondAttribute="bottom" constant="68" id="DRD-FG-WDA"/>
                             <constraint firstItem="vOP-cK-NdO" firstAttribute="leading" secondItem="4VW-7t-Tut" secondAttribute="leadingMargin" constant="79" id="E3C-Fl-zNp"/>
                             <constraint firstItem="vOP-cK-NdO" firstAttribute="top" secondItem="DqK-Ah-QDh" secondAttribute="bottom" constant="25" id="K2m-vp-45C"/>
                             <constraint firstItem="zxd-hu-xZL" firstAttribute="leading" secondItem="4VW-7t-Tut" secondAttribute="leadingMargin" constant="79" id="KA1-tc-Uvx"/>
                             <constraint firstItem="BJd-n1-2PE" firstAttribute="top" secondItem="4VW-7t-Tut" secondAttribute="top" id="R13-Cs-Huz"/>
-                            <constraint firstItem="OAk-JI-axO" firstAttribute="top" secondItem="eVl-we-4vM" secondAttribute="bottom" constant="93" id="Rjb-tR-SQJ"/>
                             <constraint firstItem="5d7-f9-VRZ" firstAttribute="top" secondItem="EZn-bT-eFY" secondAttribute="bottom" constant="27" id="US1-yJ-FP2"/>
                             <constraint firstAttribute="trailingMargin" secondItem="zxd-hu-xZL" secondAttribute="trailing" constant="42" id="WWb-E5-QKK"/>
                             <constraint firstAttribute="trailingMargin" secondItem="5d7-f9-VRZ" secondAttribute="trailing" constant="66" id="Ywd-BX-XgZ"/>
                             <constraint firstItem="BJd-n1-2PE" firstAttribute="leading" secondItem="4VW-7t-Tut" secondAttribute="leadingMargin" constant="-11" id="azV-9k-217"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="eVl-we-4vM" secondAttribute="trailing" constant="135" id="cbq-NL-WlY"/>
-                            <constraint firstItem="eVl-we-4vM" firstAttribute="leading" secondItem="FOS-v4-E1W" secondAttribute="trailing" constant="-76" id="cik-FK-C2h"/>
+                            <constraint firstAttribute="centerX" secondItem="08N-5H-bzg" secondAttribute="centerX" constant="-3" id="c2b-YW-YFm"/>
                             <constraint firstItem="DqK-Ah-QDh" firstAttribute="leading" secondItem="4VW-7t-Tut" secondAttribute="leadingMargin" constant="79" id="egl-7T-FE4"/>
                             <constraint firstItem="zxd-hu-xZL" firstAttribute="top" secondItem="5d7-f9-VRZ" secondAttribute="bottom" constant="105" id="hCz-kA-Fiv"/>
                             <constraint firstItem="9WS-hp-h7e" firstAttribute="leading" secondItem="4VW-7t-Tut" secondAttribute="leadingMargin" constant="79" id="ovP-j0-4qA"/>
-                            <constraint firstItem="eVl-we-4vM" firstAttribute="centerX" secondItem="BJd-n1-2PE" secondAttribute="centerX" id="pL7-cn-7jX"/>
+                            <constraint firstItem="08N-5H-bzg" firstAttribute="top" secondItem="FOS-v4-E1W" secondAttribute="bottom" constant="29" id="q0k-Ga-Jwd"/>
                             <constraint firstItem="9WS-hp-h7e" firstAttribute="top" secondItem="vOP-cK-NdO" secondAttribute="bottom" constant="31" id="rMt-2O-fBO"/>
                             <constraint firstItem="FOS-v4-E1W" firstAttribute="leading" secondItem="4VW-7t-Tut" secondAttribute="leadingMargin" constant="170" id="sSL-K8-F7D"/>
                             <constraint firstAttribute="trailingMargin" secondItem="BJd-n1-2PE" secondAttribute="trailing" constant="-21" id="uQP-Wi-NdV"/>
@@ -220,7 +214,7 @@
                         <outlet property="distanceLabel" destination="DqK-Ah-QDh" id="pxK-HY-IMn"/>
                         <outlet property="finishButton" destination="FOS-v4-E1W" id="6Va-HO-fdJ"/>
                         <outlet property="paceLabel" destination="9WS-hp-h7e" id="Wlv-uP-O1g"/>
-                        <outlet property="stopButton" destination="eVl-we-4vM" id="Y4P-nS-9H2"/>
+                        <outlet property="stopButton" destination="08N-5H-bzg" id="Scb-MX-RX1"/>
                         <outlet property="timeLabel" destination="zxd-hu-xZL" id="zI9-3e-jye"/>
                     </connections>
                 </viewController>
@@ -240,7 +234,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="m87-P0-7aO">
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="m87-P0-7aO">
                                 <rect key="frame" x="0.0" y="72" width="414" height="278"/>
                                 <animations/>
                                 <constraints>
@@ -254,7 +248,7 @@
                                     <navigationItem title="Activity" id="Jvc-mw-sft"/>
                                 </items>
                             </navigationBar>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Time Taken:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cmb-er-0ta">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Time Taken:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cmb-er-0ta">
                                 <rect key="frame" x="16" y="375" width="332" height="21"/>
                                 <animations/>
                                 <constraints>
