--- a/MyFit v.1/MyFit/Base.lproj/Main.storyboard
+++ b/MyFit v.1/MyFit/Base.lproj/Main.storyboard
@@ -49,10 +49,6 @@
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="bRA-j4-hbm">
-                                <rect key="frame" x="0.0" y="407" width="414" height="253"/>
-                                <animations/>
-                            </mapView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Welcome to MyFit" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ysz-rh-Kb3">
                                 <rect key="frame" x="95" y="91" width="225" height="33"/>
                                 <animations/>
@@ -90,13 +86,9 @@
                             <constraint firstItem="ysz-rh-Kb3" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="21" id="Pn1-cs-WEe"/>
                             <constraint firstAttribute="centerX" secondItem="fn3-SE-4lU" secondAttribute="centerX" id="URH-XS-DbR"/>
                             <constraint firstItem="fn3-SE-4lU" firstAttribute="leading" secondItem="kyr-zp-g65" secondAttribute="leading" id="X0v-OU-FPD"/>
-                            <constraint firstAttribute="centerX" secondItem="bRA-j4-hbm" secondAttribute="centerX" id="ZaQ-tM-chm"/>
                             <constraint firstItem="J0e-i4-2pk" firstAttribute="top" secondItem="ysz-rh-Kb3" secondAttribute="bottom" constant="38" id="dhi-PS-Rsl"/>
                             <constraint firstItem="Gsc-B6-cTy" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="ghN-kM-EM6"/>
-                            <constraint firstItem="Gsc-B6-cTy" firstAttribute="trailing" secondItem="bRA-j4-hbm" secondAttribute="trailing" id="i3H-4j-jPV"/>
                             <constraint firstItem="fn3-SE-4lU" firstAttribute="top" secondItem="kyr-zp-g65" secondAttribute="bottom" id="k3Y-P0-Yb7"/>
-                            <constraint firstItem="bRA-j4-hbm" firstAttribute="leading" secondItem="Gsc-B6-cTy" secondAttribute="leading" id="ojW-jW-cPx"/>
-                            <constraint firstItem="bRA-j4-hbm" firstAttribute="bottom" secondItem="wfy-db-euE" secondAttribute="top" constant="-27" id="u9d-Br-3c3"/>
                             <constraint firstItem="ysz-rh-Kb3" firstAttribute="centerX" secondItem="Gsc-B6-cTy" secondAttribute="centerX" id="uTe-bt-5SY"/>
                             <constraint firstItem="fn3-SE-4lU" firstAttribute="trailing" secondItem="kyr-zp-g65" secondAttribute="trailing" id="uYG-F9-Hxc"/>
                             <constraint firstAttribute="centerX" secondItem="ysz-rh-Kb3" secondAttribute="centerX" id="wkQ-3u-rKZ"/>
@@ -105,7 +97,7 @@
                     <navigationItem key="navigationItem" id="U1c-DB-gYU"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina55"/>
                     <connections>
-                        <outlet property="theMap" destination="bRA-j4-hbm" id="oUW-OE-ujK"/>
+                        <outlet property="startRun" destination="8Qh-vo-qQ2" id="6Fw-9R-o8F"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -124,96 +116,76 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Time:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zxd-hu-xZL">
-                                <rect key="frame" x="95" y="223" width="261" height="34"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Time:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zxd-hu-xZL">
+                                <rect key="frame" x="95" y="178" width="261" height="34"/>
                                 <animations/>
                                 <fontDescription key="fontDescription" type="system" pointSize="28"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Distance:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DqK-Ah-QDh">
-                                <rect key="frame" x="95" y="281" width="115" height="34"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Distance:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DqK-Ah-QDh">
+                                <rect key="frame" x="95" y="220" width="115" height="34"/>
                                 <animations/>
                                 <fontDescription key="fontDescription" type="system" pointSize="28"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BJd-n1-2PE">
+                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="BJd-n1-2PE">
                                 <rect key="frame" x="5" y="0.0" width="414" height="44"/>
                                 <animations/>
                                 <items>
                                     <navigationItem title="Running" id="ljZ-4C-IFj"/>
                                 </items>
                             </navigationBar>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pace:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9WS-hp-h7e">
-                                <rect key="frame" x="95" y="404" width="67" height="33"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Pace:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9WS-hp-h7e">
+                                <rect key="frame" x="95" y="295" width="67" height="33"/>
                                 <animations/>
                                 <fontDescription key="fontDescription" type="system" pointSize="27"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="RUN RUN RUN!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5d7-f9-VRZ">
-                                <rect key="frame" x="89" y="91" width="243" height="27"/>
-                                <animations/>
-                                <fontDescription key="fontDescription" type="system" weight="black" pointSize="22"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date: " lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vOP-cK-NdO">
-                                <rect key="frame" x="95" y="340" width="70" height="33"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Date: " lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vOP-cK-NdO">
+                                <rect key="frame" x="95" y="254" width="70" height="33"/>
                                 <animations/>
                                 <fontDescription key="fontDescription" type="system" pointSize="27"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FOS-v4-E1W">
-                                <rect key="frame" x="186" y="505" width="52" height="36"/>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FOS-v4-E1W">
+                                <rect key="frame" x="165" y="327" width="52" height="36"/>
                                 <animations/>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <state key="normal" title="Finish">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="startPressed:" destination="W74-my-gu4" eventType="touchUpInside" id="sBQ-bY-056"/>
+                                </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="08N-5H-bzg">
-                                <rect key="frame" x="194" y="570" width="33" height="30"/>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="ouL-FM-udz">
+                                <rect key="frame" x="90" y="415" width="240" height="128"/>
+                            </mapView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="08N-5H-bzg">
+                                <rect key="frame" x="112" y="156" width="33" height="30"/>
                                 <state key="normal" title="Stop">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <action selector="stopClicked:" destination="W74-my-gu4" eventType="touchUpInside" id="vEW-KF-pvC"/>
+                                    <action selector="stopClicked:" destination="W74-my-gu4" eventType="touchUpInside" id="Bn4-mg-Mfc"/>
+                                    <segue destination="bPg-zM-6V1" kind="show" identifier="RunDetails" id="6FX-yf-ukf"/>
                                 </connections>
                             </button>
                         </subviews>
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="5d7-f9-VRZ" firstAttribute="leading" secondItem="4VW-7t-Tut" secondAttribute="leadingMargin" constant="73" id="6pB-em-rhM"/>
-                            <constraint firstItem="FOS-v4-E1W" firstAttribute="top" secondItem="9WS-hp-h7e" secondAttribute="bottom" constant="68" id="DRD-FG-WDA"/>
-                            <constraint firstItem="vOP-cK-NdO" firstAttribute="leading" secondItem="4VW-7t-Tut" secondAttribute="leadingMargin" constant="79" id="E3C-Fl-zNp"/>
-                            <constraint firstItem="vOP-cK-NdO" firstAttribute="top" secondItem="DqK-Ah-QDh" secondAttribute="bottom" constant="25" id="K2m-vp-45C"/>
-                            <constraint firstItem="zxd-hu-xZL" firstAttribute="leading" secondItem="4VW-7t-Tut" secondAttribute="leadingMargin" constant="79" id="KA1-tc-Uvx"/>
-                            <constraint firstItem="BJd-n1-2PE" firstAttribute="top" secondItem="4VW-7t-Tut" secondAttribute="top" id="R13-Cs-Huz"/>
-                            <constraint firstItem="5d7-f9-VRZ" firstAttribute="top" secondItem="EZn-bT-eFY" secondAttribute="bottom" constant="27" id="US1-yJ-FP2"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="zxd-hu-xZL" secondAttribute="trailing" constant="42" id="WWb-E5-QKK"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="5d7-f9-VRZ" secondAttribute="trailing" constant="66" id="Ywd-BX-XgZ"/>
-                            <constraint firstItem="BJd-n1-2PE" firstAttribute="leading" secondItem="4VW-7t-Tut" secondAttribute="leadingMargin" constant="-11" id="azV-9k-217"/>
-                            <constraint firstAttribute="centerX" secondItem="08N-5H-bzg" secondAttribute="centerX" constant="-3" id="c2b-YW-YFm"/>
-                            <constraint firstItem="DqK-Ah-QDh" firstAttribute="leading" secondItem="4VW-7t-Tut" secondAttribute="leadingMargin" constant="79" id="egl-7T-FE4"/>
-                            <constraint firstItem="zxd-hu-xZL" firstAttribute="top" secondItem="5d7-f9-VRZ" secondAttribute="bottom" constant="105" id="hCz-kA-Fiv"/>
-                            <constraint firstItem="9WS-hp-h7e" firstAttribute="leading" secondItem="4VW-7t-Tut" secondAttribute="leadingMargin" constant="79" id="ovP-j0-4qA"/>
-                            <constraint firstItem="08N-5H-bzg" firstAttribute="top" secondItem="FOS-v4-E1W" secondAttribute="bottom" constant="29" id="q0k-Ga-Jwd"/>
-                            <constraint firstItem="9WS-hp-h7e" firstAttribute="top" secondItem="vOP-cK-NdO" secondAttribute="bottom" constant="31" id="rMt-2O-fBO"/>
-                            <constraint firstItem="FOS-v4-E1W" firstAttribute="leading" secondItem="4VW-7t-Tut" secondAttribute="leadingMargin" constant="170" id="sSL-K8-F7D"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="BJd-n1-2PE" secondAttribute="trailing" constant="-21" id="uQP-Wi-NdV"/>
-                            <constraint firstItem="DqK-Ah-QDh" firstAttribute="top" secondItem="zxd-hu-xZL" secondAttribute="bottom" constant="24" id="wYb-iy-pd8"/>
-                        </constraints>
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina55"/>
                     <connections>
-                        <outlet property="dateLabel" destination="vOP-cK-NdO" id="nlp-Je-Cih"/>
                         <outlet property="distanceLabel" destination="DqK-Ah-QDh" id="pxK-HY-IMn"/>
-                        <outlet property="finishButton" destination="FOS-v4-E1W" id="6Va-HO-fdJ"/>
+                        <outlet property="mapView" destination="ouL-FM-udz" id="sJh-0s-XVq"/>
                         <outlet property="paceLabel" destination="9WS-hp-h7e" id="Wlv-uP-O1g"/>
+                        <outlet property="promptLabel" destination="vOP-cK-NdO" id="ENC-y2-Mvo"/>
+                        <outlet property="startButton" destination="FOS-v4-E1W" id="7xA-H2-CiA"/>
                         <outlet property="stopButton" destination="08N-5H-bzg" id="Scb-MX-RX1"/>
                         <outlet property="timeLabel" destination="zxd-hu-xZL" id="zI9-3e-jye"/>
                     </connections>
